--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
   "bugs": "https://github.com/risuney/molecule-css/issues",
   "keywords": [
     "css",
+    "flexible",
+    "modern",
+    "simple",
+    "css3",
     "scss",
     "css-framework",
     "molecule-css"
